<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cocktails"
            android:icon="@drawable/ic_cocktails"
            android:onClick="cocktails"
            android:title="@string/cocktails" />
        <item
            android:id="@+id/nav_pizza"
            android:icon="@drawable/ic_pizza"
            android:onClick="pizza"
            android:title="@string/pizza" />
        <item
            android:id="@+id/nav_pasta"
            android:icon="@drawable/ic_pasta"
            android:onClick="pasta"
            android:title="@string/pasta" />

    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_contactUs"
                android:icon="@drawable/ic_contact_us"
                android:onClick="contact"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_aboutUs"
                android:icon="@drawable/ic_about_us"
                android:onClick="about"
                android:title="@string/about_us" />
            <item
                android:id="@+id/nav_locateUs"
                android:icon="@drawable/ic_locate_us"
                android:onClick="locate"
                android:title="@string/locate_us" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:onClick="shareNav"
                android:title="@string/share" />
        </menu>
    </item>
</menu>
