<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FroyoActivity">
    <androidx.cardview.widget.CardView
        android:id="@+id/froyo_cardView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/froyo_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/my_white"
                android:paddingBottom="10dp"
                android:adjustViewBounds="true"
                />
            <TextView
                android:id="@+id/froyo_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_title"
                android:textColor="@color/my_pink"
                android:fontFamily="@font/alloyink"
                android:layout_alignBottom="@id/froyo_image"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:layout_marginTop="7dp"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                />
            <TextView
                android:id="@+id/froyo_prep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prep_cook_time_2hrs"
                android:textColor="?android:textColorSecondary"
                android:layout_below="@id/froyo_title"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="4dp"
                android:drawableStart="@drawable/ic_prep_time"
                android:drawableLeft="@drawable/ic_prep_time"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                />

            <!--ADD A HORIZONTAL LINE-->
            <View
                android:id="@+id/froyo_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/froyo_prep"
                android:background="@color/css_grey"
                />

            <TextView
                android:id="@+id/froyo_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recipe_short_description"
                android:textColor="@color/my_black"
                android:fontFamily="@font/badunicorn"
                android:textSize="20sp"
                android:layout_below="@id/froyo_divider"
                android:padding="8dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:layout_marginTop="3dp"
                android:textStyle="italic"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/froyo_cardView"
        android:layout_margin="8dp"
        android:layout_centerHorizontal="true"

        >
        <!-- <TextView
             android:id="@+id/donut_heading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/how_to_prepare_a_donut"
             android:textStyle="bold"
             android:textColor="@color/grey_dark"
             />-->
        <TextView
            android:id="@+id/froyo_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/ingredients"
            android:fontFamily="@font/alloyink"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:textColor="@color/bright_tab"
            />
        <TextView
            android:id="@+id/froyo_ingredient1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plain_yogurt"
            android:layout_below="@id/froyo_ingredients"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/my_black"
            />
        <TextView
            android:id="@+id/froyo_ingredient2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/heavy_cream"
            android:layout_below="@id/froyo_ingredient1"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/my_black"
            />
        <TextView
            android:id="@+id/froyo_ingredient3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/honey"
            android:layout_below="@id/froyo_ingredient2"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/my_black"
            />
        <TextView
            android:id="@+id/froyo_ingredient4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/corn_syrup"
            android:layout_below="@id/froyo_ingredient3"
            android:textSize="20sp"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:textColor="@color/my_black"
            />


    </RelativeLayout>

</RelativeLayout>